force-app/main/default/objects/Study_Enrollment_Setting__c/Study_Enrollment_Setting__c.object-meta.xml
<CustomObject>
    <description>To track the enrollment configurations for individual program enrollment, individual enrollment and individual session enrollment. For example, max number of attempt.</description>
    <label>Study Enrollment Setting</label>
    <nameField>
        <displayFormat>SES-{00000}</displayFormat>
        <label>Study Enrollment Settings #</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Study Enrollment Settings</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>