force-app/main/default/objects/Study_Enrollment_Setting__c/fields/Action__c.field-meta.xml
<CustomField>
    <fullName>Action__c</fullName>
    <description>Allows or blocks the record when the specified number is exceeded.</description>
    <inlineHelpText>Allows or blocks the record when the specified number is exceeded.</inlineHelpText>
    <label>Action</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Allow</fullName>
            </value>
            <value>
                <fullName>Block</fullName>
                <default>true</default>
                <label>Block</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>