force-app/main/default/objects/Study_Enrollment_Setting__c/fields/Educational_Institution__c.field-meta.xml
<CustomField>
    <fullName>Educational_Institution__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Educational Institution</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Study Enrollment Settings</relationshipLabel>
    <relationshipName>Study_Enrollment_Settings</relationshipName>
    <type>Lookup</type>
</CustomField>