force-app/main/default/objects/Study_Enrollment_Setting__c/fields/Individual_Program_Enrollment__c.field-meta.xml
<CustomField>
    <fullName>Individual_Program_Enrollment__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Individual Program Enrollment</label>
    <referenceTo>Individual_Program_Enrollment__c</referenceTo>
    <relationshipLabel>Study Enrollment Settings</relationshipLabel>
    <relationshipName>Study_Enrollment_Settings</relationshipName>
    <type>Lookup</type>
</CustomField>