force-app/main/default/objects/Study_Enrollment_Setting__c/fields/Number__c.field-meta.xml
<CustomField>
    <fullName>Number__c</fullName>
    <inlineHelpText>Number value.</inlineHelpText>
    <label>Number</label>
    <precision>18</precision>
    <scale>4</scale>
    <type>Number</type>
</CustomField>