force-app/main/default/objects/Study_Enrollment_Setting__c/fields/Study_Program__c.field-meta.xml
<CustomField>
    <fullName>Study_Program__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Study Program</label>
    <referenceTo>Study_Program__c</referenceTo>
    <relationshipLabel>Study Enrollment Settings</relationshipLabel>
    <relationshipName>Study_Enrollment_Settings</relationshipName>
    <type>Lookup</type>
</CustomField>