force-app/main/default/objects/Study_Enrollment_Setting__c/fields/Study_Unit__c.field-meta.xml
<CustomField>
    <fullName>Study_Unit__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Study Unit</label>
    <referenceTo>Study_Unit__c</referenceTo>
    <relationshipLabel>Study Enrollment Settings</relationshipLabel>
    <relationshipName>Study_Enrollment_Settings</relationshipName>
    <type>Lookup</type>
</CustomField>